--- a/assets/css/popRequest.css
+++ b/assets/css/popRequest.css
@@ -5,11 +5,14 @@
     background-color: #2a2a2a;
     color: #ffffff;
     max-width: 800px;
+    height:600px;
     margin: 20px auto;
     padding: 20px;
     border-radius: 8px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     box-shadow:0px 4px 40px rgba(0,0,0,0.8);
+    overflow-y:auto;
+    scrollbar-width:none;
 }
 
 @media screen and (max-width:768px){
@@ -60,6 +63,8 @@
     color: #cccccc;
     font-size: 14px;
     margin-bottom: 8px;
+    width:100%;
+
 }
 
 .form-input {
