--- a/assets/css/products/products.css
+++ b/assets/css/products/products.css
@@ -240,4 +240,8 @@
             width: 1px;
             margin-right: 10px;
         }
+
+        .active{
+            color:yellow;
+        }
     
